swagger api for (create & index product with filtering data support)
