# app/Http/Controllers/ProductController.php
@@ -2,6 +2,7 @@
 
 namespace App\Http\Controllers;
 
+use App\Http\Requests\ProductCreateRequest;
 use App\Repositories\ProductRepository;
 use Exception;
 use App\Traits\ResponseTrait;
@@ -36,6 +37,39 @@ class ProductController extends Controller
      *             type="integer"
      *         )
      *     ),
+     *     @OA\Parameter(
+     *         name="search",
+     *         in="query",
+     *         description="Search by title",
+     *         required=false,
+     *         explode=true,
+     *         @OA\Schema(
+     *             default="",
+     *             type="string"
+     *         )
+     *     ),
+     *     @OA\Parameter(
+     *         name="orderBy",
+     *         in="query",
+     *         description="Order By column name",
+     *         required=false,
+     *         explode=true,
+     *         @OA\Schema(
+     *             default="id",
+     *             type="string"
+     *         )
+     *     ),
+     *     @OA\Parameter(
+     *         name="order",
+     *         in="query",
+     *         description="Order ordering - asc or desc",
+     *         required=false,
+     *         explode=true,
+     *         @OA\Schema(
+     *             default="desc",
+     *             type="string"
+     *         )
+     *     ),
      *     security={{"bearer":{}}},
      *     @OA\Response(
      *         response=200,
@@ -50,40 +84,78 @@ class ProductController extends Controller
     public function index(): JsonResponse
     {
         try {
-            return $this->responseSuccess($this->productRepository->getAll(request()->perPage), "Products fetched successfully");
+            return $this->responseSuccess($this->productRepository->getAll(request()->all()), "Products fetched successfully");
         } catch (Exception $e) {
             return $this->responseError([], $e->getMessage());
         }
     }
 
     /**
-     * Show the form for creating a new resource.
+     * @OA\Post(
+     *     path="/api/products",
+     *     tags={"Products"},
+     *     summary="Create new product",
+     *     description="Create new product",
+     *     operationId="store",
+     *     security={{"bearer":{}}},
+     *     @OA\RequestBody(
+     *         description="Product Object",
+     *         required=true,
+     *         @OA\MediaType(
+     *             mediaType="multipart/form-data",
+     *             @OA\Schema(
+     *                 type="object",
+     *                 @OA\Property(
+     *                     property="title",
+     *                     description="Product title",
+     *                     type="string",
+     *                     example="Product title"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="slug",
+     *                     description="Product slug",
+     *                     type="string",
+     *                     example="product-title"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="price",
+     *                     description="Product price",
+     *                     type="integer",
+     *                     example="200"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="image",
+     *                     description="Product image",
+     *                     type="string",
+     *                     format="binary"
+     *                 ),
+     *                  required = {"title", "price"}
+     *             )
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="successful operation",
+     *     ),
+     *     @OA\Response(
+     *         response=400,
+     *         description="Invalid input"
+     *     )
+     * )
      */
-    public function create()
+    public function store(ProductCreateRequest $request)
     {
-        //
-    }
-
-    /**
-     * Store a newly created resource in storage.
-     */
-    public function store(Request $request)
-    {
-        //
+        try {
+            return $this->responseSuccess($this->productRepository->create($request->all()), "Product created successfully");
+        } catch (Exception $e) {
+            return $this->responseError([], $e->getMessage());
+        }
     }
 
     /**
      * Display the specified resource.
      */
     public function show(string $id)
-    {
-        //
-    }
-
-    /**
-     * Show the form for editing the specified resource.
-     */
-    public function edit(string $id)
     {
         //
     }
