# routes/api.php
@@ -24,6 +24,5 @@ Route::post('register', [RegisterController::class, 'register']);
 Route::middleware('auth:api')->group(function () {
     Route::get('profile', [ProfileController::class, 'show']);
     Route::post('logout', [ProfileController::class, 'logout']);
-    Route::get('/products', [ProductController::class, 'index']);
-
+    Route::apiResource('products', ProductController::class);
 });
